fixed global spacing on home page

--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -16,3 +16,7 @@
 .deaths {
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
+
+#global{
+    margin-bottom: 1em;
+}
